<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaunchActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            android:text="@string/mode_selection" />

        <Button
            android:id="@+id/btn_usb"
            style="@style/launch_button"
            android:onClick="onUsbClick"
            android:layout_below="@id/info_text"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#333333"
            android:drawableStart="@android:drawable/stat_notify_sdcard_usb"
            android:text="@string/usb"
            />

        <Button
            android:id="@+id/btn_bluetooth"
            style="@style/launch_button"
            android:onClick="onBluetoothClick"
            android:layout_below="@id/btn_usb"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#0336ff"
            android:drawableStart="@android:drawable/stat_sys_data_bluetooth"
            android:text="@string/bluetooth"
            />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/btn_bluetooth"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@+id/divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Baud Rate" />

        <Spinner
            android:id="@+id/baudRateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:paddingHorizontal="20dp"
            android:paddingVertical="0dp"
            />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>